# avoid_Collision

./: .gitignore
.clangd/: config.yaml
.clangd/index/: CgxDriverService.h.6FAA52FE58272A0E.idx  CgxDriverServiceRequest.h.900BB6C1FADBCE69.idx  CgxDriverServiceResponse.h.A0FA2484C68D88B0.idx  RobotControl.h.95D309BAEFC1A70C.idx  RobotControlRequest.h.6BCDBF0C19E8C144.idx  RobotControlResponse.h.9CF4014277677320.idx  RobotGetAllDAInput.h.B3B9B9EBEA1BD673.idx  RobotGetAllDAInputRequest.h.1B92C239AFCEA174.idx  RobotGetAllDAInputResponse.h.40AD263E0F7DFB1B.idx  RobotGetAllDAOutput.h.4BC29A0187EC1BA8.idx  RobotGetAllDAOutputRequest.h.3FCD1C6974091FA8.idx  RobotGetAllDAOutputResponse.h.B7C5119183B62B96.idx  RobotGetAnalogIOState.h.DDECDB526DCEC6BC.idx  RobotGetAnalogIOStateRequest.h.FA42276C9309A24C.idx  RobotGetAnalogIOStateResponse.h.615E26C1C7CAD06F.idx  RobotGetDigitalIOState.h.90BDC2A92999DE9C.idx  RobotGetDigitalIOStateRequest.h.99A189ACEDF53136.idx  RobotGetDigitalIOStateResponse.h.F8CC300EC54997B1.idx  RobotMoveCircle.h.35C9E3057B684059.idx  RobotMoveCircleRequest.h.8E9A6BFE2E8E87D3.idx  RobotMoveCircleResponse.h.17225061B6275B4C.idx  RobotSetAnalogIOState.h.FC5C8DE117D5470B.idx  RobotSetAnalogIOStateRequest.h.C3341939851319B7.idx  RobotSetAnalogIOStateResponse.h.A66E70BAB1A187C3.idx  RobotSetDigitalIOState.h.9BFB8B58028B6000.idx  RobotSetDigitalIOStateRequest.h.3EB30CC303FA6E96.idx  RobotStateCurrent.h.72984BC825E28BC0.idx  (+22 more)
devel/: .catkin
src/my_avoid/: CMakeLists.txt
src/my_avoid/launch/: move_group_interface.launch
src/my_avoid/src/: move_group_interface.cpp
(+215 files in other folders)
